refactoring service cache

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,10 +12,10 @@
         <div class="row">
             <div class="column">
                 <h1>Key in a city to see the weather</h1>
-                <form action="/"
-                method="POST">
+                <form action="/weather"
+                method="GET">
                     <div class="input-group mb-3"> 
-                        <input type="text" class='form-control' name="cityname" id="cityname" placeholder="Please enter the city" required>
+                        <input type="text" class='form-control' name="city" id="city" placeholder="Please enter the city" required>
                         <button type="submit" class="btn btn-primary">Get Weather</button>
                     </div>
                 </form>
